src/components/footer/footer.css
.footer-container {
    width: 100%;
    background-color: var(--clr-dark);
    color: var(--clr-light);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-top: 0.5rem;
}

.footer-header {
    text-align: center;
    text-wrap: balance;
    font-weight: 600;
    text-transform: uppercase;
}

.footer-button {
    margin-block: 2rem;
}

.footer-items-container {
    width: 100%;
    padding-inline: 2rem;
    display: flex;
    flex-direction: column;
    gap: 2rem;
    padding-block: 2rem;

    & h4 {
        text-transform: uppercase;
        text-wrap: balance;
        margin-bottom: 0.5rem;
    }
}

@media (width >= 880px ) {
    .footer-items-container {
        flex-direction: row;
        justify-content: space-between;
    }
}

.footer-socials-container,
.footer-contact-container,
.footer-navigation-container {
    display: flex;
    flex-direction: column;
    align-items: start;
    gap: 0.375rem;
}



.footer-link {
    color: var(--clr-light);
    text-decoration: none;
    transition: all .3s ease-in-out
}

.footer-link::after {
    content: '';
    display: block;
    height: 1px;
    width: 0;
    background-color: var(--clr-light);
    transition: 300ms ease-in-out;
}

.footer-link:hover::after {
    width: 100%;
}

.footer-hr {
    background-color: var(--clr-light);
    height: 0.75rem;
    width: 100%;
}

